@@ -3,8 +3,9 @@ python-sqlfuse (0.5.3-1) unstable; urgency=low
   * Count directory links.
   * Fix passing the inode and mode to readdir. Arguments were backwards. Ouch.
   * Fix passing the inode and mode to readdir. Type argument is not a mode. Ouch.
+  * Retry creating files so /bin/cp is happy
 
- -- Matthias Urlichs <smurf@deee.intern.smurf.noris.de>  Wed, 06 Apr 2011 23:12:42 +0200
+ -- Matthias Urlichs <smurf@deee.intern.smurf.noris.de>  Wed, 06 Apr 2011 23:37:27 +0200
 
 python-sqlfuse (0.5.2-1) unstable; urgency=low
 
